v0.22 las 3 funciones listas, adaptable a agregarle mas salas y edificios,agregue recordatorio de formato para buscador, faltan test de Junit